crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__int_lists@ne_2.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Int(
        IntFilter {
            operator: Ne,
            rhs_value: Some(
                2,
            ),
        },
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                data_type: Int64,
                nullable: true,
            },
        ),
    },
    unfiltered: ListArray
    [
      PrimitiveArray<Int64>
    [
      1,
      2,
      3,
    ],
      PrimitiveArray<Int64>
    [
      2,
    ],
      PrimitiveArray<Int64>
    [
      2,
      2,
    ],
      PrimitiveArray<Int64>
    [
      4,
      5,
      6,
    ],
      PrimitiveArray<Int64>
    [
      7,
      4,
      9,
    ],
      PrimitiveArray<Int64>
    [
      5,
      2,
      1,
    ],
    ],
    filtered: ListArray
    [
      PrimitiveArray<Int64>
    [
      4,
      5,
      6,
    ],
      PrimitiveArray<Int64>
    [
      7,
      4,
      9,
    ],
    ],
}
